// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","hintAsTooltip":false,"removeStyles":false,"trendPositive":false,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","hintAsTooltip":false,"removeStyles":false,"trendPositive":false,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","hintAsTooltip":false,"removeStyles":false,"trendPositive":true,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","hintAsTooltip":false,"removeStyles":false,"trendPositive":true,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","hintAsTooltip":false,"removeStyles":true,"trendPositive":false,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","hintAsTooltip":false,"removeStyles":true,"trendPositive":false,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","hintAsTooltip":false,"removeStyles":true,"trendPositive":true,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","hintAsTooltip":false,"removeStyles":true,"trendPositive":true,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","hintAsTooltip":true,"removeStyles":false,"trendPositive":false,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-hint=\\"\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","hintAsTooltip":true,"removeStyles":false,"trendPositive":false,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-hint=\\"\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","hintAsTooltip":true,"removeStyles":false,"trendPositive":true,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-hint=\\"\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","hintAsTooltip":true,"removeStyles":false,"trendPositive":true,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-hint=\\"\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","hintAsTooltip":true,"removeStyles":true,"trendPositive":false,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-hint=\\"\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","hintAsTooltip":true,"removeStyles":true,"trendPositive":false,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-hint=\\"\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","hintAsTooltip":true,"removeStyles":true,"trendPositive":true,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-hint=\\"\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","hintAsTooltip":true,"removeStyles":true,"trendPositive":true,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-hint=\\"\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":false,"hintAsTooltip":false,"removeStyles":false,"trendPositive":false,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":false,"hintAsTooltip":false,"removeStyles":false,"trendPositive":false,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":false,"hintAsTooltip":false,"removeStyles":false,"trendPositive":true,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":false,"hintAsTooltip":false,"removeStyles":false,"trendPositive":true,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":false,"hintAsTooltip":false,"removeStyles":true,"trendPositive":false,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":false,"hintAsTooltip":false,"removeStyles":true,"trendPositive":false,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":false,"hintAsTooltip":false,"removeStyles":true,"trendPositive":true,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":false,"hintAsTooltip":false,"removeStyles":true,"trendPositive":true,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":false,"hintAsTooltip":true,"removeStyles":false,"trendPositive":false,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-hint=\\"\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":false,"hintAsTooltip":true,"removeStyles":false,"trendPositive":false,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-hint=\\"\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":false,"hintAsTooltip":true,"removeStyles":false,"trendPositive":true,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-hint=\\"\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":false,"hintAsTooltip":true,"removeStyles":false,"trendPositive":true,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-hint=\\"\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":false,"hintAsTooltip":true,"removeStyles":true,"trendPositive":false,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-hint=\\"\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":false,"hintAsTooltip":true,"removeStyles":true,"trendPositive":false,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-hint=\\"\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":false,"hintAsTooltip":true,"removeStyles":true,"trendPositive":true,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-hint=\\"\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":false,"hintAsTooltip":true,"removeStyles":true,"trendPositive":true,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-hint=\\"\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":null,"hintAsTooltip":false,"removeStyles":false,"trendPositive":false,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":null,"hintAsTooltip":false,"removeStyles":false,"trendPositive":false,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":null,"hintAsTooltip":false,"removeStyles":false,"trendPositive":true,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":null,"hintAsTooltip":false,"removeStyles":false,"trendPositive":true,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":null,"hintAsTooltip":false,"removeStyles":true,"trendPositive":false,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":null,"hintAsTooltip":false,"removeStyles":true,"trendPositive":false,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":null,"hintAsTooltip":false,"removeStyles":true,"trendPositive":true,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":null,"hintAsTooltip":false,"removeStyles":true,"trendPositive":true,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":null,"hintAsTooltip":true,"removeStyles":false,"trendPositive":false,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-hint=\\"\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":null,"hintAsTooltip":true,"removeStyles":false,"trendPositive":false,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-hint=\\"\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":null,"hintAsTooltip":true,"removeStyles":false,"trendPositive":true,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-hint=\\"\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":null,"hintAsTooltip":true,"removeStyles":false,"trendPositive":true,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-hint=\\"\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":null,"hintAsTooltip":true,"removeStyles":true,"trendPositive":false,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-hint=\\"\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":null,"hintAsTooltip":true,"removeStyles":true,"trendPositive":false,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-hint=\\"\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":null,"hintAsTooltip":true,"removeStyles":true,"trendPositive":true,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-hint=\\"\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":null,"hintAsTooltip":true,"removeStyles":true,"trendPositive":true,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-hint=\\"\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":true,"hintAsTooltip":false,"removeStyles":false,"trendPositive":false,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"flash\\" appear=\\"true\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":true,"hintAsTooltip":false,"removeStyles":false,"trendPositive":false,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"flash\\" appear=\\"true\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":true,"hintAsTooltip":false,"removeStyles":false,"trendPositive":true,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"flash\\" appear=\\"true\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":true,"hintAsTooltip":false,"removeStyles":false,"trendPositive":true,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"flash\\" appear=\\"true\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":true,"hintAsTooltip":false,"removeStyles":true,"trendPositive":false,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"flash\\" appear=\\"true\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":true,"hintAsTooltip":false,"removeStyles":true,"trendPositive":false,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"flash\\" appear=\\"true\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":true,"hintAsTooltip":false,"removeStyles":true,"trendPositive":true,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"flash\\" appear=\\"true\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":true,"hintAsTooltip":false,"removeStyles":true,"trendPositive":true,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"flash\\" appear=\\"true\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":true,"hintAsTooltip":true,"removeStyles":false,"trendPositive":false,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"flash\\" appear=\\"true\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-hint=\\"\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":true,"hintAsTooltip":true,"removeStyles":false,"trendPositive":false,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"flash\\" appear=\\"true\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-hint=\\"\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":true,"hintAsTooltip":true,"removeStyles":false,"trendPositive":true,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"flash\\" appear=\\"true\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-hint=\\"\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":true,"hintAsTooltip":true,"removeStyles":false,"trendPositive":true,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"flash\\" appear=\\"true\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5 min-h-26 rounded-md bg-ink-300 p-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-hint=\\"\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":true,"hintAsTooltip":true,"removeStyles":true,"trendPositive":false,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"flash\\" appear=\\"true\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-hint=\\"\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":true,"hintAsTooltip":true,"removeStyles":true,"trendPositive":false,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"flash\\" appear=\\"true\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-hint=\\"\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":true,"hintAsTooltip":true,"removeStyles":true,"trendPositive":true,"trendDirection":"down"} 1`] = `
"<transition-stub name=\\"flash\\" appear=\\"true\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"down\\" trend-hint=\\"\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;

exports[`renders StatCard with all prop options: {"icon":"python","value":"2000","title":"Application documentation coverage","trendValue":300,"trendIcon":"threshold","subtitle":"hello-world","to":"/something/to/route/to","withTransition":true,"hintAsTooltip":true,"removeStyles":true,"trendPositive":true,"trendDirection":"up"} 1`] = `
"<transition-stub name=\\"flash\\" appear=\\"true\\" subtitle=\\"hello-world\\"><a class=\\"flex flex-grow flex-col justify-between space-y-5\\">
    <div class=\\"flex flex-row justify-between space-x-2\\">
      <div class=\\"flex items-start space-x-1.5 text-sm leading-6\\">
        <h5 class=\\"font-medium text-vanilla-100\\">
          Application documentation coverage
        </h5>
      </div>
      <div class=\\"flex-shrink-0\\">
        <z-icon icon=\\"python\\" size=\\"medium\\" color=\\"transparent\\" class=\\"float-right p-px\\"></z-icon>
      </div>
    </div>
    <div class=\\"flex flex-row space-x-2\\">
      <div class=\\"flex items-center space-x-2\\"><span class=\\"font-medium tracking-snug text-vanilla-100 text-1.5xl\\"> 2000 </span>
        <div class=\\"space-y-1\\">
          <ticker-stub icon=\\"threshold\\" trend-direction=\\"up\\" trend-hint=\\"\\" trend-positive=\\"true\\" trend-value=\\"300\\"></ticker-stub>
        </div>
      </div>
      <!---->
    </div>
  </a></transition-stub>"
`;
